refactor modules; remove kotlin